# music-prompt

./: Makefile  chords.py  melody.py  pyproject.toml
